# rust-actix-api

./: .env.example  .gitignore  Cargo.toml  diesel.toml
src/: main.rs
src/auth/: jwt.rs
src/database/: connection.rs  schema.rs
src/database/migrations/2024-08-02-090103_create_users_table/: up.sql
src/database/models/: user.rs
src/errors/: global.rs  login.rs  mod.rs  register.rs
src/routes/: auth.rs
src/utils/: auth.rs
