[package]
name = "rust-actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
